--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/ws": "^7.2.6",
+    "discord.js": "^12.2.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^3.9.7"
