--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "rustylad",
+  "name": "oxide",
   "version": "1.0.0",
   "description": "A Discord bot to help aide in various Rust information",
   "main": "index.js",
   "scripts": {
-    "start": "gulp && node dist/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.0.27",
-    "@types/ws": "^7.2.6",
-    "discord.js": "^12.2.0",
-    "gulp": "^4.0.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "typescript": "^3.9.7"
+    "discord.js": "^12.2.0"
   }
 }
